# 3gc3

as0/: Assignment0-ss1.ppm  CMakeLists.txt  assignment0.cpp
as1/: CMakeLists.txt  cube.cpp  dynamic_earth.mkv  dynamic_moon.mkv  dynamic_sun.mkv  rotate_system.cpp  static_system.cpp
as2/: CMakeLists.txt  blendshape.cpp  cube.cpp  faces.cpp  fshader.fs  mesh.h  model.h  shader.h  vshader.vs
as3/: CMakeLists.txt  mesh.h  model.h  texture.cpp  vshader.vs
as3/headers/: mesh.h  model.h
as3/point_light/: CMakeLists.txt  fshader.fs  point_light.cpp
as3/results/: at_disco_dyn.mkv  bucket_point_dyn.mkv  timmy_point_dyn.mkv
as3/spot_light/: CMakeLists.txt  fshader.fs  spot_light.cpp  vshader.vs
as3/texture/: CMakeLists.txt  fshader.fs  texture.cpp
as4/: CMakeLists.txt  main.cpp
as4/headers/: Camera.h  Material.h  Ray.h  Sphere.h  Vector3D.h  World.h
